--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "reverse-proxy"
 version = "0.1.0"
-authors = ["Srikanth Bhandary <srikanth.bhandary1@hp.com>"]
+authors = ["Srikanth Bhandary <srikanth.bhandary@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
